<resources>
    <string name="app_name">PocketScheduler</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- String in Calendar Fragment-->
    <string name="title_Calendar">Calendar</string>
    <!-- Stings in Project Fragment-->
    <string name="title_Project">Project</string>
    <string name="title_Creator">Creator</string>
    <string name="title_Participant">Participant</string>
    <string name="title_Events">Events</string>
    <string name="title_Info">Info</string>
    <string name="title_Schedule">Schedule</string>
    <string name="title_Quest">Quest</string>


    <!-- String in Event Fragment -->
    <string name="title_event_Previous">Previous</string>
    <string name="title_event_ComingSoon">Coming\n Soon</string>
    <string name="title_event_DraftBox">Draft\n Box</string>
    <string name="title_event_PendingBox">Pending\n Box</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_project_part2">Project_part2</string>
    <string name="title_activity_new_project">NewProject</string>
    <!-- Strings related to the side drawer-->
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="title_activity_new_event">NewEvent</string>
    <string name="eveeditpriority_only">EDITPRIORITY_CREATOR</string>
    <string name="eveeditpriority_all">EDITPRIORITY_ALL</string>
    <string name="evetype_entertaiment">TYPE_ENTERTAIMENT</string>
    <string name="evetype_study">TYPE_STUDY</string>
    <string name="evetype_job">TYPE_JOB</string>
    <string name="evetype_friend">TYPE_FRIEND</string>
    <string name="evetype_family">TYPE_FAMILY</string>
    <string name="evetype_trip">TYPE_TRIP</string>
    <string name="evetype_sport">TYPE_SPORT</string>
    <string name="evetype_date">TYPE_DATE</string>

    <string name="protype_entertaiment">TYPE_ENTERTAIMENT</string>
    <string name="protype_study">TYPE_STUDY</string>
    <string name="protype_job">TYPE_JOB</string>
    <string name="protype_friend">TYPE_FRIEND</string>
    <string name="protype_family">TYPE_FAMILY</string>
    <string name="protype_trip">TYPE_TRIP</string>
    <string name="protype_sport">TYPE_SPORT</string>
    <string name="protype_date">TYPE_DATE</string>
</resources>
