<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
    <Button
        android:id = "@+id/Button_Previous"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:text="@string/title_event_Previous"
        style="@style/Base.Widget.AppCompat.Button.ButtonBar.AlertDialog"/>
    <Button
        android:id = "@+id/Button_ComingSoon"
        android:layout_width="0dp"
        android:layout_weight = "1"
        android:layout_height="match_parent"
        android:text="@string/title_event_ComingSoon"
        style="@style/Base.Widget.AppCompat.Button.ButtonBar.AlertDialog"/>
    <Button
        android:id = "@+id/Button_DraftBox"
        android:layout_width="0dp"
        android:layout_weight = "1"
        android:layout_height="match_parent"
        android:text="@string/title_event_DraftBox"
        style="@style/Base.Widget.AppCompat.Button.ButtonBar.AlertDialog"/>
    <Button
        android:id = "@+id/Button_PendingBox"
        android:layout_width="0dp"
        android:layout_weight = "1"
        android:layout_height="match_parent"
        android:text="@string/title_event_PendingBox"
        style="@style/Base.Widget.AppCompat.Button.ButtonBar.AlertDialog"/>

</LinearLayout>
