<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
    <Button
        android:id = "@+id/Button_calendar"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:text="@string/title_Calendar"
        style="@style/Base.Widget.AppCompat.Button.ButtonBar.AlertDialog"/>
    <Button
        android:id = "@+id/Button_project"
        android:layout_width="0dp"
        android:layout_weight = "1"
        android:layout_height="match_parent"
        android:text="@string/title_Project"
        style="@style/Base.Widget.AppCompat.Button.ButtonBar.AlertDialog"/>
    <Button
        android:id = "@+id/Button_events"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:text="@string/title_Events"
        style="@style/Base.Widget.AppCompat.Button.ButtonBar.AlertDialog"/>

</LinearLayout>
